--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reload",
+  "name": "delivery",
   "version": "1.0.0",
   "description": "My riveting Nuxt.js project",
   "author": "Swadesh Behera",
